<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitiy.LoginActivity">

    <!-- Imagen - 30% de la pantalla -->
    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/splash" />

    <!-- Contenido principal - 70% de la pantalla -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:textAlignment="center"
            android:textSize="31sp"
            android:text="@string/descubre_quedadas_cerca_de_ti" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="18sp"
            android:lineSpacingExtra="10dp"
            android:textSize="16sp"
            android:text="@string/es_hora_de_jugar" />

        <!-- Campo de login -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/contrasena">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón de iniciar -->
        <Button
            android:layout_marginTop="24dp"
            android:id="@+id/startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vamos_a_quedar"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textViewRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</LinearLayout>